cambio de letra y modificaciones, resultado final

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -7,6 +7,9 @@
     font-size: 20px;
     border-top: 1px solid white;
     padding: 10px 0px;
+    p {
+        font-weight: bolder;
+    }
     .icon {
         color: white;
         margin-top: 5px;
