--- a/src/app/components/proyectos/proyectos.component.scss
+++ b/src/app/components/proyectos/proyectos.component.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap');
 * {
     background: transparent;
     color: black;
@@ -12,8 +12,7 @@ h1 {
     border-bottom: 2px solid black;
     font-size: 40px;
     padding-bottom: 15px;
-    font-family: 'Dosis', sans-serif;
-    font-weight: bolder;
+    font-family: 'Libre Baskerville', serif;
 }
 
 .proyectos {
