--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -42,7 +42,7 @@ h6 {
         display: flex;
         align-items: center;
         height: auto;
-        background: #B3B6B7;
+        background: #D7DBDD;
         padding-top: 5%;
         padding-bottom: 10%;
     }
