--- a/src/app/components/personal/personal.component.scss
+++ b/src/app/components/personal/personal.component.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap');
 * {
     background: transparent;
 }
@@ -18,8 +18,7 @@
             padding: 0;
             font-size: 60px;
             margin-bottom: 15px;
-            font-family: 'Dosis', sans-serif;
-            font-weight: bolder;
+            font-family: 'Libre Baskerville', serif;
         }
         h2,
         h3,
@@ -28,7 +27,7 @@
         h6 {
             margin: 0;
             padding: 0;
-            font-family: 'Dosis', sans-serif;
+            font-family: 'Libre Baskerville', serif;
         }
     }
     .info-personal {
