--- a/src/app/components/personal/personal.component.html
+++ b/src/app/components/personal/personal.component.html
@@ -4,8 +4,8 @@
         <h2>Analista Programador Computacional</h2>
     </div>
     <div class="info-personal">
-        <p>Programador con mayor dominio en el Front-End en especial con JavaScript, con ganas de intengrar mas conocimientos en Back-End. Muy responsable y en constante aprendizaje de nuevas tecnologias, además de seguir profundizando en los conocimientos
-            adquiridos anteriormente, autodidacta, perseverante y con facilidad para trabajar en equipo. <br>
+        <p>Programador con mayor dominio en el Front-End en especial con JavaScript, con ganas de intengrar más conocimientos en Back-End. Muy responsable y en constante aprendizaje de nuevas tecnologías, además de seguir profundizando en los conocimientos
+            adquiridos anteriormente. Autodidacta, perseverante y con facilidad para trabajar en equipo. <br>
             <a href="https://www.linkedin.com/in/javier-antonio-freire-moreira-b226a71ba/" target="_blank"><i class="fa-brands fa-linkedin icon"></i></a>
             <a href="https://github.com/javierf39" target="_blank"><i class="fa-brands fa-github icon"></i></a>
 
