--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,13 @@
+<div class="nav">
+    <app-nav></app-nav>
+</div>
+
 <div class="container">
     <div id="inicio" data-aos="zoom-in">
         <app-personal></app-personal>
     </div>
-    <div id="tecnologias" data-aos="fade-up">
-        <app-tecnologias></app-tecnologias>
+    <div id="sobre-mi" data-aos="fade-up">
+        <app-sobre-mi></app-sobre-mi>
     </div>
     <div id="proyectos" data-aos="fade-right">
         <app-proyectos></app-proyectos>
@@ -11,9 +15,7 @@
 
 
 </div>
-<div class="nav">
-    <app-nav></app-nav>
-</div>
+
 
 <div class="footer">
     <app-footer></app-footer>
