--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,7 +1,10 @@
-<nav>
-    <ul>
+<nav id="nav">
+    <div id="logo">
+        <img src="../../../assets/img/logo_2.png" alt="logo">
+    </div>
+    <ul id="menu">
         <li><a href="#inicio" data-link-alt="Inicio"><span>Inicio</span></a></li>
-        <li><a href="#tecnologias" data-link-alt="Tecnologías"><span>Tecnologías</span></a></li>
+        <li><a href="#sobre-mi" data-link-alt="Sobre-mi"><span>Sobre mí</span></a></li>
         <li><a href="#proyectos" data-link-alt="Proyectos"><span>Proyectos</span></a></li>
     </ul>
 </nav>
