--- a/src/app/components/personal/personal.component.html
+++ b/src/app/components/personal/personal.component.html
@@ -1,17 +1,12 @@
 <div class="personal">
-    <div class="titulo">
+    <div class="info-personal">
         <h1>JAVIER FREIRE</h1>
         <h2>Analista Programador Computacional</h2>
+        <a class="icono" href="https://www.linkedin.com/in/javier-antonio-freire-moreira-b226a71ba/" target="_blank"><i class="fa-brands fa-linkedin icon"></i></a>
+        <a class="icono" href="https://github.com/javierf39" target="_blank"><i class="fa-brands fa-github icon"></i></a>
     </div>
-    <div class="info-personal">
-        <p>Programador con mayor dominio en el Front-End en especial con JavaScript, con ganas de intengrar más conocimientos en Back-End. Muy responsable y en constante aprendizaje de nuevas tecnologías, además de seguir profundizando en los conocimientos
-            adquiridos anteriormente. Autodidacta, perseverante y con facilidad para trabajar en equipo. <br>
-            <a href="https://www.linkedin.com/in/javier-antonio-freire-moreira-b226a71ba/" target="_blank"><i class="fa-brands fa-linkedin icon"></i></a>
-            <a href="https://github.com/javierf39" target="_blank"><i class="fa-brands fa-github icon"></i></a>
+    <div class="icono-bajar">
+        <a href="#sobre-mi"><i class="fa-solid fa-down-long icono"></i></a>
+    </div>
 
-        </p>
-        <div class="img">
-            <img src="../assets/img/perfil1.jpeg" alt="imagen-perfil">
-        </div>
-    </div>
 </div>
