--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,300&display=swap');
+$amarillo:#FFDE59;
 * {
     font-family: 'Dosis', sans-serif;
-    background: transparent;
     color: white;
     margin: 0;
     padding: 0;
@@ -21,30 +21,26 @@ h6 {
 }
 
 .container {
-    width: 100%;
+    width: 80%;
     height: auto;
+    margin: 0 auto;
     #inicio {
-        background-image: url('../assets/img/fondo_portafolio.jpg');
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
-        background-attachment: fixed;
         display: flex;
+        justify-content: center;
         align-items: center;
+        width: 100%;
         height: 100vh;
     }
-    #tecnologias {
-        background: #ECF0F1;
+    #sobre-mi {
         height: auto;
-        padding-top: 5%;
+        border-top: 2px solid $amarillo;
+        padding-top: 60px;
     }
     #proyectos {
-        display: flex;
-        align-items: center;
         height: auto;
-        background: #D7DBDD;
-        padding-top: 5%;
-        padding-bottom: 10%;
+        border-top: 2px solid $amarillo;
+        padding-top: 60px;
+        margin-bottom: 100px;
     }
 }
 
@@ -53,7 +49,7 @@ h6 {
     margin: auto;
     position: fixed;
     width: 100%;
-    height: 50px;
-    // margin-left: 10%;
+    height: auto;
+    z-index: 1;
     top: 0;
 }
