--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,29 +1,17 @@
 .footer {
-    background-image: url('../../../assets/img/fondo_portafolio.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
+    width: 100%;
     font-size: 20px;
     border-top: 1px solid white;
     padding: 10px 0px;
+    background-color: #212121;
     p {
+        color: white;
         font-weight: bolder;
     }
-    .icon {
+    a {
         color: white;
         margin-top: 5px;
         margin-right: 15px;
-        width: 2.5%;
-        height: 2.5%;
-    }
-}
-
-@media (max-width:800px) {
-    .footer {
-        .icon {
-            width: 4%;
-            height: 4%;
-        }
+        font-size: 25px;
     }
 }
