--- a/src/app/components/personal/personal.component.scss
+++ b/src/app/components/personal/personal.component.scss
@@ -1,126 +1,64 @@
-@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap');
-* {
-    background: transparent;
-}
-
+@import url('https://fonts.googleapis.com/css2?family=Lora&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Crimson+Text:wght@600&display=swap');
+$font-titulos:'Crimson Text',
+serif;
+$amarillo:#FFDE59;
 .personal {
     display: flex;
-    height: auto;
-    width: 80%;
-    margin-left: 10%;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    .titulo {
-        margin-bottom: 3%;
+    .info-personal {
+        h1,
+        h2 {
+            font-family: $font-titulos;
+        }
         h1 {
             margin: 0;
-            padding: 0;
-            font-size: 60px;
-            margin-bottom: 15px;
-            font-family: 'Libre Baskerville', serif;
+            margin-bottom: 10px;
+            font-size: 50px;
         }
-        h2,
-        h3,
-        h4,
-        h5,
-        h6 {
-            margin: 0;
-            padding: 0;
-            font-family: 'Libre Baskerville', serif;
+        h2 {
+            font-size: 25px;
+        }
+        .icono {
+            font-size: 30px;
+            margin: 5px;
+            color: white;
         }
     }
-    .info-personal {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        p {
-            flex-basis: 70%;
-            font-size: 20px;
-            line-height: 25px;
-            .icon {
-                color: white;
-                margin-top: 15px;
-                margin-right: 15px;
-                width: 5%;
-                height: 5%;
-            }
-        }
-        .img {
-            flex-basis: 20%;
-            img {
-                width: 100%;
-                height: 100%;
-                border-radius: 20%;
-            }
+    .icono-bajar {
+        width: 15px;
+        height: 25px;
+        margin: 0 auto;
+        margin-top: 40%;
+        border: 2px solid $amarillo;
+        border-radius: 30%;
+        padding: 10px;
+        animation: down 0.5s infinite alternate;
+        .icono {
+            width: 100%;
+            height: 100%;
+            color: $amarillo;
         }
     }
 }
 
-@media (max-width:900px) {
-    .personal {
-        .img {
-            padding-bottom: 20px;
-        }
+@keyframes down {
+    0% {
+        transform: translateY(0%);
+    }
+    100% {
+        transform: translateY(50%);
     }
 }
 
-@media (max-width:800px) {
-    .personal {
-        margin-top: 55px;
-        .titulo {
-            h1 {
-                font-size: 45px;
-            }
-            h2 {
-                font-size: 20px;
-            }
-        }
-        .info-personal {
-            flex-direction: column;
-            p {
-                flex-basis: 100%;
-            }
-        }
-        .img {
-            width: 30%;
-            padding: 0%;
-        }
-    }
-}
-
-@media (max-width:600px) {
+@media(max-width:440px) {
     .personal {
         .info-personal {
-            .img {
-                width: 40%;
-            }
-        }
-    }
-}
-
-@media (max-width:500px) {
-    .personal {
-        .titulo {
             h1 {
                 font-size: 35px;
-                margin-bottom: 5px;
             }
             h2 {
-                font-size: 15px;
-            }
-        }
-    }
-}
-
-@media (max-width:450px) {
-    .personal {
-        .info-personal {
-            p {
-                .icon {
-                    width: 7%;
-                    height: 7%;
-                }
+                font-size: 18px;
             }
         }
     }
