--- a/src/app/components/proyectos/proyectos.component.scss
+++ b/src/app/components/proyectos/proyectos.component.scss
@@ -1,17 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap');
-* {
-    background: transparent;
-    color: black;
-}
-
+$amarillo:#FFDE59;
 h1 {
     text-align: left;
-    margin: 0%;
-    width: 80%;
-    margin-left: 10%;
-    border-bottom: 2px solid black;
     font-size: 40px;
-    padding-bottom: 15px;
     font-family: 'Libre Baskerville', serif;
 }
 
@@ -19,31 +10,28 @@ h1 {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin-top: 5%;
-    width: 80%;
-    height: auto;
-    margin-left: 10%;
+    width: 100%;
     .proyecto {
-        flex-basis: 49%;
+        flex-basis: 47%;
         position: relative;
+        margin-top: 15px;
+        border: 5px solid $amarillo;
         border-radius: 20px;
-        margin-top: 2%;
         img {
             width: 100%;
             height: 100%;
             border-radius: 20px;
-            transition: all 400ms ease-in-out;
-            box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+            transition: all 600ms ease-in-out;
         }
         .info-proyecto {
             position: absolute;
-            box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
-            background: rgba(240, 243, 244, 0.2);
+            background: #424949;
             border-radius: 20px;
             opacity: 0;
             left: 0;
             top: 0;
             width: 90%;
+            height: 80%;
             padding: 5%;
             text-align: center;
             transition: all 400ms ease-in-out;
@@ -57,9 +45,15 @@ h1 {
                 padding: 0px;
                 font-size: 16px;
             }
-            a {
-                margin-left: 5px;
-                color: white;
+            .links {
+                margin: 25px 0px;
+                a {
+                    margin: 5px;
+                    padding: 3px 25px;
+                    border: 2px solid $amarillo;
+                    color: $amarillo;
+                    font-size: 20px;
+                }
             }
             .tecnologias {
                 display: flex;
@@ -67,19 +61,15 @@ h1 {
                 justify-content: center;
                 margin-top: 15px;
                 .icon {
-                    width: 7%;
-                    height: 7%;
+                    font-size: 35px;
                     margin: 0px 5px;
                     margin-top: 5px;
                 }
             }
         }
     }
-    .proyecto:hover {
-        box-shadow: none;
-    }
     .proyecto:hover img {
-        transform: scale(1.2);
+        transform: scale(1.3);
         opacity: 0;
     }
     .proyecto:hover .info-proyecto {
@@ -114,10 +104,9 @@ h1 {
                     justify-content: center;
                     align-items: center;
                     .icons {
-                        flex-basis: 50%;
+                        flex-basis: 55%;
                         .icon {
-                            width: 12%;
-                            height: 12%;
+                            font-size: 20px;
                         }
                     }
                 }
@@ -139,25 +128,40 @@ h1 {
     }
 }
 
-@media (max-width:500px) {
+@media (max-width:830px) {
     .proyectos {
         .proyecto {
+            position: static;
+            height: 350px;
+            img {
+                height: 50%;
+                border-radius: 20px 20px 0 0;
+                opacity: 1 !important;
+                transform: scale(1) !important;
+            }
             .info-proyecto {
+                position: static;
+                opacity: 1;
+                border-radius: 0 0 20px 20px;
+                height: 49%;
+                width: 95%;
+                padding: 0 2.5%;
+                box-shadow: none;
                 h2 {
                     font-size: 16px;
                 }
                 p {
                     font-size: 14px;
                 }
+                .links {
+                    margin-top: 20px;
+                    margin-bottom: 20px;
+                    a {
+                        font-size: 12px;
+                        padding: 5px 20px;
+                    }
+                }
             }
-        }
-    }
-}
-
-@media (max-width:400px) {
-    .proyectos {
-        .proyecto:hover {
-            margin-bottom: 60px;
         }
     }
 }
