--- a/src/app/components/proyectos/proyectos.component.scss
+++ b/src/app/components/proyectos/proyectos.component.scss
@@ -12,9 +12,10 @@ h1 {
     justify-content: space-between;
     width: 100%;
     .proyecto {
-        flex-basis: 47%;
+        flex-basis: 48%;
         position: relative;
         margin-top: 15px;
+        margin-bottom: 15px;
         border: 5px solid $amarillo;
         border-radius: 20px;
         img {
