--- a/src/app/components/personal/personal.component.scss
+++ b/src/app/components/personal/personal.component.scss
@@ -14,29 +14,28 @@ $amarillo:#FFDE59;
         h1 {
             margin: 0;
             margin-bottom: 10px;
-            font-size: 50px;
+            font-size: 40px;
         }
         h2 {
-            font-size: 25px;
+            font-size: 20px;
         }
         .icono {
-            font-size: 30px;
+            font-size: 25px;
             margin: 5px;
             color: white;
         }
     }
     .icono-bajar {
-        width: 15px;
-        height: 25px;
+        width: 25px;
+        height: 30px;
         margin: 0 auto;
         margin-top: 40%;
         border: 2px solid $amarillo;
         border-radius: 30%;
-        padding: 10px;
+        padding-top: 10px;
         animation: down 0.5s infinite alternate;
         .icono {
-            width: 100%;
-            height: 100%;
+            font-size: 20px;
             color: $amarillo;
         }
     }
