--- a/src/app/components/proyectos/proyectos.component.scss
+++ b/src/app/components/proyectos/proyectos.component.scss
@@ -25,21 +25,24 @@ h1 {
             transition: all 600ms ease-in-out;
         }
         .info-proyecto {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
             position: absolute;
             background: #424949;
             border-radius: 20px;
             opacity: 0;
             left: 0;
             top: 0;
-            width: 90%;
-            height: 80%;
-            padding: 5%;
+            width: 100%;
+            height: 100%;
+            // padding: 3%;
             text-align: center;
             transition: all 400ms ease-in-out;
             h2 {
-                font-size: 25px;
                 font-family: 'Dosis', sans-serif;
                 font-weight: bolder;
+                margin: 0;
             }
             p {
                 margin: 0px;
@@ -47,52 +50,37 @@ h1 {
                 font-size: 16px;
             }
             .links {
-                margin: 25px 0px;
+                margin: 20px 0px;
                 a {
                     margin: 5px;
-                    padding: 3px 25px;
+                    padding: 5px 7px;
                     border: 2px solid $amarillo;
+                    border-radius: 50%;
                     color: $amarillo;
-                    font-size: 20px;
+                    font-size: 15px;
+                    transition: all 400ms;
+                }
+                a:hover {
+                    box-shadow: 0px 0px 15px $amarillo;
                 }
             }
             .tecnologias {
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
-                margin-top: 15px;
                 .icon {
                     font-size: 35px;
                     margin: 0px 5px;
-                    margin-top: 5px;
                 }
             }
         }
     }
     .proyecto:hover img {
-        transform: scale(1.3);
+        transform: scale(1.2);
         opacity: 0;
     }
     .proyecto:hover .info-proyecto {
         opacity: 1;
-    }
-}
-
-@media (max-width:1300px) {
-    .proyectos {
-        .proyecto {
-            .info-proyecto {
-                h2 {
-                    margin: 0%;
-                }
-                .tecnologias {
-                    margin-top: 5px;
-                    .icon {
-                        margin-top: 2px;
-                    }
-                }
-            }
-        }
     }
 }
 
@@ -105,7 +93,7 @@ h1 {
                     justify-content: center;
                     align-items: center;
                     .icons {
-                        flex-basis: 55%;
+                        flex-basis: 30%;
                         .icon {
                             font-size: 20px;
                         }
@@ -116,21 +104,9 @@ h1 {
     }
 }
 
-@media (max-width:900px) {
-    .proyectos {
-        justify-content: center;
-        .proyecto {
-            flex-basis: 100%;
-            margin-bottom: 10px;
-            .info-proyecto {
-                transform: scale(1);
-            }
-        }
-    }
-}
-
 @media (max-width:830px) {
     .proyectos {
+        flex-direction: column;
         .proyecto {
             position: static;
             height: 350px;
@@ -148,18 +124,24 @@ h1 {
                 width: 95%;
                 padding: 0 2.5%;
                 box-shadow: none;
+                // h2 {
+                //     font-size: 16px;
+                // }
+            }
+        }
+    }
+}
+
+@media(max-width:680px) {
+    .proyectos {
+        .proyecto {
+            .info-proyecto {
                 h2 {
-                    font-size: 16px;
+                    font-size: 18px;
                 }
-                p {
-                    font-size: 14px;
-                }
-                .links {
-                    margin-top: 20px;
-                    margin-bottom: 20px;
-                    a {
-                        font-size: 12px;
-                        padding: 5px 20px;
+                .tecnologias {
+                    .icons {
+                        flex-basis: 60%;
                     }
                 }
             }
