re-diseño proyectos

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,9 +1,9 @@
 .footer {
     width: 100%;
     font-size: 20px;
-    border-top: 1px solid white;
+    border-top: 2px solid#FFDE59;
     padding: 10px 0px;
-    background-color: #212121;
+    background: #424949;
     p {
         color: white;
         font-weight: bolder;
