--- a/src/app/components/proyectos/proyectos.component.scss
+++ b/src/app/components/proyectos/proyectos.component.scss
@@ -8,49 +8,31 @@ h1 {
 
 .proyectos {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    width: 100%;
+    flex-direction: column;
+    gap: 15px;
     .proyecto {
-        flex-basis: 48%;
-        position: relative;
-        margin-top: 15px;
-        margin-bottom: 15px;
-        border: 5px solid $amarillo;
-        border-radius: 20px;
+        display: flex;
+        width: 100%;
+        height: 200px;
+        border: 4px solid $amarillo;
         img {
-            width: 100%;
+            object-fit: cover;
+            width: 55%;
             height: 100%;
-            border-radius: 20px;
-            transition: all 600ms ease-in-out;
         }
         .info-proyecto {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            position: absolute;
-            background: #424949;
-            border-radius: 20px;
-            opacity: 0;
-            left: 0;
-            top: 0;
-            width: 100%;
+            width: 45%;
             height: 100%;
-            // padding: 3%;
-            text-align: center;
-            transition: all 400ms ease-in-out;
+            // padding: 10px 0px;
+            background: #424949;
             h2 {
-                font-family: 'Dosis', sans-serif;
-                font-weight: bolder;
                 margin: 0;
+                margin-top: 10px;
             }
             p {
-                margin: 0px;
-                padding: 0px;
                 font-size: 16px;
             }
             .links {
-                margin: 20px 0px;
                 a {
                     margin: 5px;
                     padding: 5px 7px;
@@ -69,82 +51,173 @@ h1 {
                 flex-direction: column;
                 justify-content: center;
                 .icon {
-                    font-size: 35px;
+                    font-size: 25px;
                     margin: 0px 5px;
                 }
             }
         }
     }
-    .proyecto:hover img {
-        transform: scale(1.2);
-        opacity: 0;
-    }
-    .proyecto:hover .info-proyecto {
-        opacity: 1;
-    }
-}
-
-@media (max-width:1100px) {
-    .proyectos {
-        .proyecto {
-            .info-proyecto {
-                .tecnologias {
-                    flex-direction: row;
-                    justify-content: center;
-                    align-items: center;
-                    .icons {
-                        flex-basis: 30%;
-                        .icon {
-                            font-size: 20px;
-                        }
-                    }
-                }
-            }
+    .proyecto:nth-child(even) {
+        img {
+            order: 2
         }
     }
 }
 
-@media (max-width:830px) {
+@media(max-width:650px) {
     .proyectos {
-        flex-direction: column;
         .proyecto {
-            position: static;
-            height: 350px;
+            flex-direction: column;
+            height: 400px;
             img {
+                object-fit: fill;
+                width: 100%;
                 height: 50%;
-                border-radius: 20px 20px 0 0;
-                opacity: 1 !important;
-                transform: scale(1) !important;
             }
             .info-proyecto {
-                position: static;
-                opacity: 1;
-                border-radius: 0 0 20px 20px;
-                height: 49%;
-                width: 95%;
-                padding: 0 2.5%;
-                box-shadow: none;
-                // h2 {
-                //     font-size: 16px;
-                // }
+                order: 2;
+                width: 100%;
+                height: 50%;
             }
         }
     }
 }
 
-@media(max-width:680px) {
-    .proyectos {
-        .proyecto {
-            .info-proyecto {
-                h2 {
-                    font-size: 18px;
-                }
-                .tecnologias {
-                    .icons {
-                        flex-basis: 60%;
-                    }
-                }
-            }
-        }
-    }
-}
+// .proyectos {
+//     display: flex;
+//     flex-wrap: wrap;
+//     justify-content: space-between;
+//     width: 100%;
+//     .proyecto {
+//         flex-basis: 48%;
+//         position: relative;
+//         margin-top: 15px;
+//         margin-bottom: 15px;
+//         border: 5px solid $amarillo;
+//         //border-radius: 20px;
+//         img {
+//             width: 100%;
+//             height: 100%;
+//             //border-radius: 20px;
+//             transition: all 600ms ease-in-out;
+//         }
+//         .info-proyecto {
+//             display: flex;
+//             flex-direction: column;
+//             justify-content: center;
+//             position: absolute;
+//             background: #424949;
+//             //border-radius: 20px;
+//             opacity: 0;
+//             left: 0;
+//             top: 0;
+//             width: 100%;
+//             height: 100%;
+//             text-align: center;
+//             transition: all 400ms ease-in-out;
+//             h2 {
+//                 font-family: 'Dosis', sans-serif;
+//                 font-weight: bolder;
+//                 margin: 0;
+//             }
+//             p {
+//                 margin: 0px;
+//                 padding: 0px;
+//                 font-size: 16px;
+//             }
+//             .links {
+//                 margin: 20px 0px;
+//                 a {
+//                     margin: 5px;
+//                     padding: 5px 7px;
+//                     border: 2px solid $amarillo;
+//                     border-radius: 50%;
+//                     color: $amarillo;
+//                     font-size: 15px;
+//                     transition: all 400ms;
+//                 }
+//                 a:hover {
+//                     box-shadow: 0px 0px 15px $amarillo;
+//                 }
+//             }
+//             .tecnologias {
+//                 display: flex;
+//                 flex-direction: column;
+//                 justify-content: center;
+//                 .icon {
+//                     font-size: 35px;
+//                     margin: 0px 5px;
+//                 }
+//             }
+//         }
+//     }
+//     .proyecto:hover img {
+//         transform: scale(1.2);
+//         opacity: 0;
+//     }
+//     .proyecto:hover .info-proyecto {
+//         opacity: 1;
+//     }
+// }
+// @media (max-width:1100px) {
+//     .proyectos {
+//         .proyecto {
+//             .info-proyecto {
+//                 .tecnologias {
+//                     flex-direction: row;
+//                     justify-content: center;
+//                     align-items: center;
+//                     .icons {
+//                         flex-basis: 30%;
+//                         .icon {
+//                             font-size: 20px;
+//                         }
+//                     }
+//                 }
+//             }
+//         }
+//     }
+// }
+// @media (max-width:830px) {
+//     .proyectos {
+//         flex-direction: column;
+//         .proyecto {
+//             position: static;
+//             // height: 350px;
+//             img {
+//                 height: 50%;
+//                 //border-radius: 20px 20px 0 0;
+//                 opacity: 1 !important;
+//                 transform: scale(1) !important;
+//             }
+//             .info-proyecto {
+//                 position: static;
+//                 opacity: 1;
+//                 //border-radius: 0 0 20px 20px;
+//                 height: 50%;
+//                 width: 100%;
+//                 // padding: 0 2.5%;
+//                 box-shadow: none;
+//                 // h2 {
+//                 //     font-size: 16px;
+//                 // }
+//             }
+//         }
+//     }
+// }
+// @media(max-width:680px) {
+//     .proyectos {
+//         .proyecto {
+//             .info-proyecto {
+//                 h2 {
+//                     font-size: 18px;
+//                 }
+//                 .tecnologias {
+//                     .icons {
+//                         flex-basis: 60%;
+//                     }
+//                 }
+//             }
+//         }
+//     }
+// }
